[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "geoutils"
dynamic = ["version"]

# To write version to file
[tool.setuptools_scm]
write_to = "geoutils/_version.py"
fallback_version = "0.0.1"

[tool.black]
target_version = ['py36']

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
	"tests",
	"geoutils"
]
