[metadata]
author = The GlacioHack Team
name = geoutils
version = 0.1.1
description = Analysis and handling of georeferenced rasters and vectors
keywords = raster, vector, geospatial, gis, xarray
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/GlacioHack/geoutils
download_url = https://pypi.org/project/geoutils/

[options]
packages = find:
scripts = bin/geoviewer.py
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
include_package_data = True
python_requires = >=3.9
# Avoid pinning dependencies in requirements.txt (which we don't do anyways, and we rely mostly on Conda)
# (https://caremad.io/posts/2013/07/setup-vs-requirement/, https://github.com/pypa/setuptools/issues/1951)
install_requires = file: requirements.txt

[options.package_data]
geoutils =
    py.typed

[options.packages.find]
include =
    geoutils
    geoutils.raster

[options.extras_require]
opt =
    scikit-image
test =
    pytest
    pytest-xdist
    pytest-lazy-fixture
    pyyaml
    flake8
    pylint
doc =
    sphinx
    sphinx-book-theme
    sphinx-gallery
    sphinx-design
    sphinx-autodoc-typehints
    sphinxcontrib-programoutput
    sphinx-argparse
    autovizwidget
    graphviz
    myst-nb
    numpydoc
    typing-extensions
dev =
    %(opt)s
    %(test)s
    %(doc)s
all =
    %(dev)s
