[metadata]
author = GeoUtils developers
name = geoutils
version = 0.1.17
description = Analysis and handling of georeferenced rasters and vectors
keywords = raster, vector, geospatial, gis, xarray
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/GlacioHack/geoutils
download_url = https://pypi.org/project/geoutils/

[options]
packages = find:
scripts = bin/geoviewer.py
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
include_package_data = True
python_requires = >=3.10,<3.14
# Avoid pinning dependencies in requirements.txt (which we don't do anyways, and we rely mostly on Conda)
# (https://caremad.io/posts/2013/07/setup-vs-requirement/, https://github.com/pypa/setuptools/issues/1951)
install_requires = file: requirements.txt

[options.package_data]
geoutils =
    config.ini
    py.typed

[options.packages.find]
include =
    geoutils
    geoutils.*

[options.extras_require]
opt =
    laspy[lazrs]
    scikit-image
test =
    gdal
    pytest
    pytest-xdist
    pytest-lazy-fixtures
    pyyaml
    flake8
    netcdf4
    dask-memusage
    pre-commit
doc =
    sphinx
    sphinx-book-theme
    sphinx-gallery
    sphinx-design
    sphinx-autodoc-typehints
    sphinxcontrib-programoutput
    sphinx-argparse
    autovizwidget
    graphviz
    myst-nb
    numpydoc
    typing-extensions
dev =
    %(opt)s
    %(test)s
    %(doc)s
all =
    %(dev)s
